[0, 15, 5]: 2017-06-08
  - repeat `load()` on a single `YAML()` instance would fail.

(0, 15, 4) 2017-06-08: |
  - `transform` parameter on dump that expects a function taking a
    string and returning a string. This allows transformation of the output
    before it is written to stream.
  - some updates to the docs

(0, 15, 3) 2017-06-07:
  - No longer try to compile C extensions on Windows. Compilation can be forced by setting
    the environment variable `RUAMEL_FORCE_EXT_BUILD` to some value
    before starting the `pip install`.

(0, 15, 2) 2017-06-07:
  - update to conform to mypy 0.511:mypy --strict

(0, 15, 1) 2017-06-07:
  - Any `duplicate keys  <http://yaml.readthedocs.io/en/latest/api.html#duplicate-keys>`_
    in mappings generate an error (in the old API this change generates a warning until 0.16)
  - dependecy on ruamel.ordereddict for 2.7 now via extras_require

(0, 15, 0) 2017-06-04:
  - it is no allowed to pass in a ``pathlib.Path`` as "stream" parameter to all
    load/dump functions
  - passing in a non-supported object (e.g. a string) as "stream" will result in a
    much more meaningful YAMLStreamError.
  - assigning a normal string value to an existing CommentedMap key or CommentedSeq
    element will result in a value cast to the previous value's type if possible.

(0, 14, 12) 2017-05-14:
  - fix for issue 119, deepcopy not returning subclasses (reported and PR by
    Constantine Evans <cevans@evanslabs.org>)

(0, 14, 11) 2017-05-01:
  - fix for issue 103 allowing implicit documents after document end marker line (``...``)
    in YAML 1.2

(0, 14, 10) 2017-04-26:
  - fix problem with emitting using cyaml

(0, 14, 9) 2017-04-22:
  - remove dependency on ``typing`` while still supporting ``mypy``
    (http://stackoverflow.com/a/43516781/1307905)
  - fix unclarity in doc that stated 2.6 is supported (reported by feetdust)

(0, 14, 8) 2017-04-19:
  - fix Text not available on 3.5.0 and 3.5.1, now proactively setting version guards